# AdventOfCode

./: README.md
2021/Day1/: part1.py
2021/Day11/: part2.py
2021/Day2/: part2.py
2021/Day5/: part1.py
2021/Day7/: part1.py  part2.py
2021/Day8/: part1.py
2021/Day9/: part1.py  part2.py
Day1/: part2.py
Day2/: part1.py
Day3/: part1.py  part2.py
Rust/: .gitignore  Cargo.toml  build.rs  inputs.txt
Rust/2021/: Cargo.toml  mod.rs
Rust/2021/Day 1/: part1.rs
Rust/2021/Day01/: part2.rs
Rust/2021/day01/: part1.rs  part2.rs
Rust/2021/day15/: part1.rs  part2.rs
Rust/2021/src/: lib.rs
Rust/2023/: Cargo.toml  mod.rs
Rust/2023/day01/: part1.rs  part2.rs
Rust/2023/day02/: part1.rs  part2.rs
Rust/2023/day03/: part1.rs  part2.rs
Rust/2023/day04/: part1.rs  part2.rs
Rust/2023/day05/: part1.rs
Rust/2023/src/: lib.rs
Rust/2023/src/day01/: part2.rs
Rust/2023/src/day02/: part1.rs  part2.rs
Rust/2023/src/day03/: part1.rs
Rust/2023/src/day04/: part2.rs
Rust/2024/: mod.rs
Rust/2024/day01/: part1.rs  part2.rs
Rust/2024/day02/: part1.rs  part2.rs
Rust/2024/day03/: part1.rs  part2.rs
Rust/2024/day04/: part1.rs  part2.rs
Rust/2024/day05/: part1.rs  part2.rs
Rust/2024/day06/: part1.rs  part2.rs
Rust/2024/day07/: part1.rs  part2.rs
Rust/2024/day08/: part1.rs  part2.rs
Rust/2024/day09/: part1.rs  part2.rs
Rust/2024/day11/: part1.rs  part2.rs
Rust/2024/day13/: part1.rs  part2.rs
Rust/2024/day14/: part1.rs  part2.rs
Rust/src/: clap_app.rs  error.rs  main.rs  year.rs
Rust/src/traits/: Cargo.toml
Rust/src/traits/src/: lib.rs
(+37 files in other folders)
